--- a/Admin/Products.html
+++ b/Admin/Products.html
@@ -317,34 +317,13 @@
                 </form>
             </div>
         </div>
-        <script src="sidebar.js"></script>
-        <script src="LogOut.js"></script>
+        <script src="JS/sidebar.js"></script>
+        <script src="JS/LogOut.js"></script>
+        <script src="JS/mobileView.js"></script>
         <script>
             document.addEventListener("DOMContentLoaded", function() {
                 sidebarhandeler("gererProducts");
             })
-        // Toggle Profile Dropdown
-        const profileBtn = document.getElementById('profile-btn');
-        const profileDropdown = document.getElementById('profile-dropdown');
-
-        profileBtn.addEventListener('click', function() {
-            profileDropdown.classList.toggle('hidden');
-        });
-
-        // Close dropdown when clicking outside
-        document.addEventListener('click', function(event) {
-            if (!profileBtn.contains(event.target) && !profileDropdown.contains(event.target)) {
-                profileDropdown.classList.add('hidden');
-            }
-        });
-
-        // Mobile menu toggle
-        const menuBtn = document.getElementById('menu-btn');
-        const sidebar = document.getElementById('sidebar');
-
-        menuBtn.addEventListener('click', function() {
-            sidebar.classList.toggle('translate-x-full');
-        });
 
         // Update Modal Logic
         const updateModal = document.getElementById('update-modal');
