--- a/admin/NewUser.html
+++ b/admin/NewUser.html
@@ -147,9 +147,9 @@
             </div>
         </form>
     </div>
-    <script src="LogOut.js"></script>
-    <script src="sidebar.js"></script>
-
+    <script src="JS/LogOut.js"></script>
+    <script src="JS/sidebar.js"></script>
+    <script src="JS/mobileView.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             sidebarhandeler("gererUsers");
