--- a/admin/Users.html
+++ b/admin/Users.html
@@ -130,8 +130,9 @@
         </div>
     </div>
 
-    <script src="sidebar.js"></script>
-    <script src="LogOut.js"></script>
+    <script src="JS/sidebar.js"></script>
+    <script src="JS/LogOut.js"></script>
+    <script src="JS/mobileView.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             sidebarhandeler("gererUsers");
