--- a/Admin/Clients.html
+++ b/Admin/Clients.html
@@ -108,6 +108,13 @@
                     </button>
                 </a>
             </div>
+            <!-- Error Message -->
+            <div id="error-message"
+                class="hidden border border-red-500 rounded-lg p-4 mb-4">
+                <p class="text-red-500">
+                    <i class="fas fa-exclamation-triangle"></i>
+                    حدث خطأ ما. يرجى المحاولة مرة أخرى</p>
+            </div>
 
             <!-- Search Bar and Add Client Button -->
             <div
@@ -133,136 +140,25 @@
                                 الهاتف</th>
                             <th
                                 class="p-3 border-b whitespace-nowrap">المدينة</th>
-                            <th class="p-3 border-b whitespace-nowrap">تاريخ
-                                التسجيل</th>
                             <th
                                 class="p-3 border-b whitespace-nowrap">الإجراءات</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- Client 1 -->
-                        <tr class="hover:bg-gray-50">
-                            <td class="p-3 border-b whitespace-nowrap">محمد
-                                أحمد</td>
-                            <td class="p-3 border-b whitespace-nowrap">+966
-                                500000000</td>
-                            <td
-                                class="p-3 border-b whitespace-nowrap">الرياض</td>
-                            <td
-                                class="p-3 border-b whitespace-nowrap">2023-10-01</td>
-                            <td
-                                class="p-3 border-b text-center  flex flex-row gap-2">
-                                <button
-                                    class="bg-blue-500 text-white px-2 py-1 rounded-full hover:bg-blue-600">
-                                    <i class="fas fa-edit"></i>
-                                </button>
-                                <button
-                                    class="bg-red-500 text-white px-2 py-1 rounded-full hover:bg-red-600">
-                                    <i class="fas fa-trash"></i>
-                                </button>
-                                <button
-                                    class="bg-green-500 text-white px-2 py-1 rounded-full hover:bg-green-600">
-                                    <i class="fas fa-phone"></i>
-                                </button>
-                                <button
-                                    class="bg-green-700 text-white px-2 py-1 rounded-full hover:bg-green-800">
-                                    <i class="fa-brands fa-whatsapp"></i>
-                                </button>
-                            </td>
-                        </tr>
-
-                        <!-- Client 2 -->
-                        <tr class="hover:bg-gray-50">
-                            <td class="p-3 border-b whitespace-nowrap">سارة
-                                خالد</td>
-                            <td class="p-3 border-b whitespace-nowrap">+966
-                                511111111</td>
-                            <td class="p-3 border-b whitespace-nowrap">جدة</td>
-                            <td
-                                class="p-3 border-b whitespace-nowrap">2023-09-15</td>
-                            <td
-                                class="p-3 border-b text-center flex flex-row gap-2">
-                                <button
-                                    class="bg-blue-500 text-white px-2 py-1 rounded-full hover:bg-blue-600">
-                                    <i class="fas fa-edit"></i>
-                                </button>
-                                <button
-                                    class="bg-red-500 text-white px-2 py-1 rounded-full hover:bg-red-600">
-                                    <i class="fas fa-trash"></i>
-                                </button>
-                                <button
-                                    class="bg-green-500 text-white px-2 py-1 rounded-full hover:bg-green-600">
-                                    <i class="fas fa-phone"></i>
-                                </button>
-                                <button
-                                    class="bg-green-700 text-white px-2 py-1 rounded-full hover:bg-green-800">
-                                    <i class="fa-brands fa-whatsapp"></i>
-                                </button>
-                            </td>
-                        </tr>
-
-                        <!-- Client 3 -->
-                        <tr class="hover:bg-gray-50">
-                            <td class="p-3 border-b whitespace-nowrap">علي
-                                حسن</td>
-                            <td class="p-3 border-b whitespace-nowrap">+966
-                                522222222</td>
-                            <td
-                                class="p-3 border-b whitespace-nowrap">الدمام</td>
-                            <td
-                                class="p-3 border-b whitespace-nowrap">2023-08-20</td>
-                            <td
-                                class="p-3 border-b text-center  flex flex-row gap-2">
-                                <button
-                                    class="bg-blue-500 text-white px-2 py-1 rounded-full hover:bg-blue-600">
-                                    <i class="fas fa-edit"></i>
-                                </button>
-                                <button
-                                    class="bg-red-500 text-white px-2 py-1 rounded-full hover:bg-red-600">
-                                    <i class="fas fa-trash"></i>
-                                </button>
-                                <button
-                                    class="bg-green-500 text-white px-2 py-1 rounded-full hover:bg-green-600">
-                                    <i class="fas fa-phone"></i>
-                                </button>
-                                <button
-                                    class="bg-green-700 text-white px-2 py-1 rounded-full hover:bg-green-8s00">
-                                    <i class="fa-brands fa-whatsapp"></i>
-                                </button>
-                            </td>
-                        </tr>
+                    
                     </tbody>
                 </table>
             </div>
         </div>
-        <script src="LogOut.js"></script>
-        <script src="sidebar.js"></script>
+        <script src="JS/LogOut.js"></script>
+        <script src="JS/sidebar.js"></script>
+        <script src="JS/mobileView.js"></script>
+        <script src="JS/ClientsManagement.js"></script>
         <script>
             document.addEventListener('DOMContentLoaded', function() {
                 sidebarhandeler("gererClients");
+                fetchClients();
             })
-        // Toggle Profile Dropdown
-        const profileBtn = document.getElementById('profile-btn');
-        const profileDropdown = document.getElementById('profile-dropdown');
-
-        profileBtn.addEventListener('click', function() {
-            profileDropdown.classList.toggle('hidden');
-        });
-
-        // Close dropdown when clicking outside
-        document.addEventListener('click', function(event) {
-            if (!profileBtn.contains(event.target) && !profileDropdown.contains(event.target)) {
-                profileDropdown.classList.add('hidden');
-            }
-        });
-
-        // Mobile menu toggle
-        const menuBtn = document.getElementById('menu-btn');
-        const sidebar = document.getElementById('sidebar');
-
-        menuBtn.addEventListener('click', function() {
-            sidebar.classList.toggle('translate-x-full');
-        });
     </script>
     </body>
 </html>
