--- a/Admin/Dashboard.html
+++ b/Admin/Dashboard.html
@@ -223,33 +223,10 @@
 
         </div>
 
-        <script>
-        // Toggle Profile Dropdown
-        const profileBtn = document.getElementById('profile-btn');
-        const profileDropdown = document.getElementById('profile-dropdown');
-
-        profileBtn.addEventListener('click', function() {
-            profileDropdown.classList.toggle('hidden');
-        });
-
-        // Close dropdown when clicking outside
-        document.addEventListener('click', function(event) {
-            if (!profileBtn.contains(event.target) && !profileDropdown.contains(event.target)) {
-                profileDropdown.classList.add('hidden');
-            }
-        });
-
-        // Mobile menu toggle
-        const menuBtn = document.getElementById('menu-btn');
-        const sidebar = document.getElementById('sidebar');
-
-        menuBtn.addEventListener('click', function() {
-            sidebar.classList.toggle('translate-x-full');
-        });
-    </script>
-
-<script src="LogOut.js"></script>
-<script src="sidebar.js"></script>
+        
+<script src="JS/mobileView.js"></script>
+<script src="JS/LogOut.js"></script>
+<script src="JS/sidebar.js"></script>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         sidebarhandeler("gererDashboard");
