--- a/Admin/NewProduct.html
+++ b/Admin/NewProduct.html
@@ -231,40 +231,13 @@
                 </form>
             </div>
         </div>
-        <script src="LogOut.js"></script>
-        <script src="sidebar.js"></script>
-
+        <script src="JS/LogOut.js"></script>
+        <script src="JS/sidebar.js"></script>
+        <script src="JS/mobileView.js"></script>
         <script>
         document.addEventListener('DOMContentLoaded', function() {
             sidebarhandeler("gererProducts");
         })
-        // Toggle Profile Dropdown
-        const profileBtn = document.getElementById('profile-btn');
-        const profileDropdown = document.getElementById('profile-dropdown');
-
-        profileBtn.addEventListener('click', function() {
-            profileDropdown.classList.toggle('hidden');
-        });
-
-        // Close dropdown when clicking outside
-        document.addEventListener('click', function(event) {
-            if (!profileBtn.contains(event.target) && !profileDropdown.contains(event.target)) {
-                profileDropdown.classList.add('hidden');
-            }
-        });
-
-        // Mobile menu toggle
-        const menuBtn = document.getElementById('menu-btn');
-        const closeBtn = document.getElementById('close-btn');
-        const sidebar = document.getElementById('sidebar');
-
-        menuBtn.addEventListener('click', function() {
-            sidebar.classList.toggle('translate-x-full');
-        });
-
-        closeBtn.addEventListener('click', function() {
-            sidebar.classList.add('translate-x-full');
-        });
     </script>
     </body>
 </html>
