--- a/Admin/Categories.html
+++ b/Admin/Categories.html
@@ -284,112 +284,7 @@
                 </div>
             </div>
         </div>
-
-        <script>
-            let categoryID = null;
-
-            function updateCategory() {
-                const successMessage = document.getElementById('success-message');
-                const categoryName = document.getElementById('categoryName').value;
-                const categoryImage = document.getElementById('fileInput2').files[0];
-
-                if (!categoryName) {
-                    document.getElementById('categoryNameError').innerText = 'يرجى ادخال اسم الفئة';
-                    return;
-                }
-
-                if (categoryImage && categoryImage.size > 2 * 1024 * 1024) {
-                    document.getElementById('categoryImageError').classList.remove('hidden');
-                    return;
-                }
-
-                let imageUrl = null;
-
-                // Upload image if provided
-                const formData = new FormData();
-                if (categoryImage) {
-                formData.append('image', categoryImage);
-            }
-            formData.append('label', categoryName);
-                fetch(`https://sbaishop.com/api/category/${categoryID}/edit`, {
-                    method: 'POST',
-                    headers: {
-                        'Authorization': `Bearer ${token}`,
-                    },
-                    body: formData
-                }).then(response => {
-                    if (response.ok) {
-                        closeUpdateModal();
-                        successMessage.classList.remove('hidden');
-                        fetchCategorys();
-                    } else {
-                        throw response;
-                    }
-                }).catch(response => {
-                    if (response.status === 401) {
-                        logout();
-                    } else if (response.status === 422 ) {
-                        document.getElementById('categoryNameError').innerText = 'اسم الفئة موجود بالفعل';
-                    } else if (response.status === 500) {
-                        document.getElementById('error-message1').classList.remove('hidden');
-                    } else {
-                        closeUpdateModal();
-                        document.getElementById('error-message').classList.remove('hidden');
-                    }
-
-                })
-            }
-
-            // img upload 
-var loadFile = function (event, uploaderId) {
-    var input = event.target;
-    var file = input.files[0];
-    var type = file.type;
-    var output = document.getElementById('preview_img' + uploaderId);
-    var deleteButton = document.getElementById('deleteButton' + uploaderId);
-
-    output.src = URL.createObjectURL(event.target.files[0]);
-    output.onload = function () {
-        URL.revokeObjectURL(output.src); // free memory
-        deleteButton.classList.remove('hidden');
-    }
-};
-
-function deleteImage(uploaderId) {
-    event.preventDefault(); // Prevent page refresh
-
-    var output = document.getElementById('preview_img' + uploaderId);
-    var deleteButton = document.getElementById('deleteButton' + uploaderId);
-    var fileInput = document.getElementById('fileInput' + uploaderId);
-    var defaultImageURL =
-        'https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Plus_symbol.svg/500px-Plus_symbol.svg.png';
-
-    output.src = defaultImageURL;
-    deleteButton.classList.add('hidden');
-    fileInput.value = null; // Clear the file input
-
-    // Check if the default image is displayed
-    if (output.src.endsWith(defaultImageURL)) {
-        deleteButton.classList.add('hidden');
-    } else {
-        deleteButton.classList.remove('hidden');
-    }
-}
-        
-            // Function to open the update modal
-            function openUpdateModal(category) {
-                categoryID = category.id;
-                document.getElementById('categoryName').value = category.label;
-                document.getElementById('preview_img2').src = category.image_url; // Clear file input
-                document.getElementById('updateModal').classList.remove('hidden');
-            }
-
-            // Function to close the update modal
-            function closeUpdateModal() {
-                document.getElementById('updateModal').classList.add('hidden');
-                categoryID = null;
-            }
-        </script>
+        <srcipt src="JS/CategoriesManagement.js"></srcipt>
         <script src="JS/mobileView.js"></script>
     </body>
 </html>
