--- a/Admin/NewOrder.html
+++ b/Admin/NewOrder.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,9 +8,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
-        body { font-family: 'Tajawal', sans-serif; padding-top: 64px; } /* Add padding for navbar */
+        body {
+            font-family: 'Tajawal', sans-serif;
+            padding-top: 64px;
+        }
+
+        /* Add padding for navbar */
     </style>
 </head>
+
 <body class="bg-gray-100 text-black flex flex-col min-h-screen">
     <!-- Navbar -->
     <nav class="bg-gray-800 text-white p-4 fixed top-0 left-0 right-0 z-50">
@@ -38,15 +45,13 @@
                         <img src="../download.png" alt="Profile" class="w-8 h-8 rounded-full">
                     </button>
                     <!-- Profile Dropdown -->
-                    <div id="profile-dropdown" class="hidden absolute left-0 mt-2 w-48 bg-white text-black rounded-lg shadow-lg">
-                        <button
-                                class="block px-4 py-2 hover:bg-gray-100">الملف
-                                الشخصي</button>
-                            <button
-                                class="block px-4 py-2 hover:bg-gray-100">الإعدادات</button>
-                            <button onclick="logout()"
-                                class="block px-4 py-2 hover:bg-gray-100">تسجيل
-                                الخروج</button>
+                    <div id="profile-dropdown"
+                        class="hidden absolute left-0 mt-2 w-48 bg-white text-black rounded-lg shadow-lg">
+                        <button class="block px-4 py-2 hover:bg-gray-100">الملف
+                            الشخصي</button>
+                        <button class="block px-4 py-2 hover:bg-gray-100">الإعدادات</button>
+                        <button onclick="logout()" class="block px-4 py-2 hover:bg-gray-100">تسجيل
+                            الخروج</button>
                     </div>
                 </div>
             </div>
@@ -54,7 +59,8 @@
     </nav>
 
     <!-- Sidebar -->
-    <div id="sidebar" class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
+    <div id="sidebar"
+        class="fixed right-0 w-64 h-screen bg-gray-800 text-white p-5 transform translate-x-full md:translate-x-0 transition-transform duration-300">
         <h2 class="text-center text-xl font-bold mb-4">لوحة التحكم</h2>
         <nav class="space-y-2">
             <a href="Dashboard.html" id="dashboard" class="block py-2 px-4 hover:bg-gray-700 rounded-lg">
@@ -82,148 +88,79 @@
     </div>
 
     <!-- Main Content -->
-    <div class="p-6 md:mr-64"> <!-- Add margin-top for navbar -->
-        <h1 class="text-center text-2xl font-bold text-gray-800 mb-4">
+    <div class="p-2 md:p-6 md:mr-64"> <!-- Add margin-top for navbar -->
+        <h1 class="text-right text-2xl font-bold text-gray-800 mb-4">
             <i class="fas fa-plus"></i> طلب جديد
         </h1>
 
         <!-- New Order Form -->
-        <div class="bg-white rounded-lg shadow p-6">
-            <form>
-                <!-- Customer Information -->
-                <div class="mb-6">
-                    <h2 class="text-xl font-bold text-gray-800 mb-4">
-                        <i class="fas fa-user text-yellow-400"></i> معلومات العميل
-                    </h2>
-                    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-                        <div>
-                            <label for="customer-name" class="block text-gray-700 mb-2">اسم العميل</label>
-                            <select
-                                id="customer-name"
-                                class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
-                                required>
-                                <option value>اختر اسم العميل</option>
-                                <option value="محمد أحمد">محمد أحمد</option>
-                                <option value="سارة خالد">سارة خالد</option>
-                                <option value="علي حسن">علي حسن</option>
-                                <option value="فاطمة علي">فاطمة علي</option>
-                            </select>
-                        </div>
-                        <div>
-                            <label for="customer-phone" class="block text-gray-700 mb-2">رقم الهاتف</label>
-                            <input
-                                id="customer-phone"
-                                type="tel"
-                                class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
-                                placeholder="أدخل رقم الهاتف"
-                                required>
-                        </div>
-                        <div>
-                            <label for="customer-email" class="block text-gray-700 mb-2">البريد الإلكتروني</label>
-                            <input
-                                id="customer-email"
-                                type="email"
-                                class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
-                                placeholder="أدخل البريد الإلكتروني">
-                        </div>
-                        <div>
-                            <label for="customer-city" class="block text-gray-700 mb-2">المدينة</label>
-                            <input
-                                id="customer-city"
-                                type="text"
-                                class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
-                                placeholder="أدخل المدينة"
-                                required>
-                        </div>
+        <div class="bg-gray-100 rounded-lg shadow p-2">
+            <div class="flex flex-col md:flex-row gap-2 w-full">
+                <!-- products list -->
+                <div
+                    class="order-2 md:order-1 rounded-md bg-white border border-gray-300 w-full md:w-3/5 p-2 max-h-auto">
+                    <h2 class="font-semibold text-lg mb-2">ابحث عن منتج</h2>
+                    <div class="relative">
+                        <input type="text" id="searchInput" placeholder="🔍 ابحث عن منتج"
+                            class="w-full px-4 py-2 border border-blue-500 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        <ul id="productList"
+                            class="absolute w-full mt-1 bg-white border border-gray-300 rounded-lg shadow-md hidden">
+                            <!-- سيتم إدراج العملاء هنا ديناميكيًا -->
+                        </ul>
+                    </div>
+                    <!-- جدول المنتجات -->
+                    <div class="mt-6">
+                        <table class="w-full bg-white border rounded-lg">
+                            <thead>
+                                <tr class="bg-gray-200 text-gray-600 text-right">
+                                    <th class="p-3">الاسم</th>
+                                    <th class="p-3">السعر</th>
+                                    <th class="p-3">الكمية</th>
+                                    <th class="p-3">المجموع</th>
+                                    <th class="p-3">المخزون</th>
+                                    <th class="p-3">الإجراءات</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="border-b">
+                                    <td class="p-3 flex items-center gap-2">
+                                        <img src="https://via.placeholder.com/40" class="rounded-lg"> المنتج الخامس
+                                    </td>
+                                    <td class="p-3 text-center"><input type="number" value="300"
+                                            class="w-16 text-center border rounded-lg"></td>
+                                    <td class="p-3 text-center"><input type="number" value="1"
+                                            class="w-16 text-center border rounded-lg"></td>
+                                    <td class="p-3 text-center">$300.00</td>
+                                    <td class="p-3 text-center text-gray-500">غير متعقب</td>
+                                    <td class="p-3 text-center">
+                                        <button
+                                            class="text-red-500 hover:text-red-700 rounded-full bg-gray-100 px-2 py-1">
+                                            <i class=" fa-solid fa-trash"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
-
-                <!-- Order Details -->
-                <div class="mb-6">
-                    <h2 class="text-xl font-bold text-gray-800 mb-4">
-                        <i class="fas fa-shopping-cart text-yellow-400"></i> تفاصيل الطلب
-                    </h2>
-                    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-                        <div>
-                            <label for="product-name" class="block text-gray-700 mb-2">اسم المنتج</label>
-                            <select
-                                id="product-name"
-                                class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
-                                required>
-                                <option value>اختر اسم المنتج</option>
-                                <option value="كريم للشعر">كريم للشعر</option>
-                                <option value="كريم للجسم">كريم للجسم</option>
-                                <option value="كريم للوجه">كريم للوجه</option>
-                                <option value="كريم للجلد">كريم للجلد</option>
-                            </select>
-                        </div>
-                        <div>
-                            <label for="quantity" class="block text-gray-700 mb-2">الكمية</label>
-                            <input
-                                id="quantity"
-                                type="number"
-                                class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
-                                placeholder="أدخل الكمية"
-                                required>
-                        </div>
-                        <div>
-                            <label for="price" class="block text-gray-700 mb-2">السعر</label>
-                            <input
-                                id="price"
-                                type="number"
-                                class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
-                                placeholder="أدخل السعر"
-                                required>
-                        </div>
-                        <div>
-                            <label for="total" class="block text-gray-700 mb-2">الإجمالي</label>
-                            <input
-                                id="total"
-                                type="text"
-                                class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400"
-                                placeholder="الإجمالي"
-                                readonly>
-                        </div>
+                <!-- client list -->
+                <div class="order-1 md:order-2 rounded-md bg-white border border-gray-300 w-full md:w-2/5 p-2">
+                    <h2 class="font-semibold text-lg mb-2">ابحث عن عميل أو أضف واحدا جديدا</h2>
+                    <div class="relative">
+                        <input type="text" id="clientSearchInput" placeholder="🔍 ابحث عن عميل"
+                            class="w-full px-4 py-2 border border-blue-500 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        <ul id="clientList"
+                            class="absolute w-full mt-1 bg-white border border-gray-300 rounded-lg shadow-md hidden">
+                            <!-- سيتم إدراج العملاء هنا ديناميكيًا -->
+                        </ul>
                     </div>
                 </div>
-
-                <!-- Actions -->
-                <div class="flex justify-end gap-4">
-                    <button
-                        type="button"
-                        class="bg-gray-500 text-white px-4 py-2 rounded-lg hover:bg-gray-600 transition duration-300">
-                        <i class="fas fa-times"></i> إلغاء
-                    </button>
-                    <button
-                        type="submit"
-                        class="bg-yellow-400 text-black px-4 py-2 rounded-lg hover:bg-yellow-500 transition duration-300">
-                        <i class="fas fa-save"></i> حفظ الطلب
-                    </button>
-                </div>
-            </form>
+            </div>
         </div>
-    </div>
-    <script src="JS/sidebar.js"></script>
-    <script src="JS/LogOut.js"></script>
-    <script src="JS/mobileView.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            sidebarhandeler("gererOrders");
-        })
-        // Calculate Total
-        const quantityInput = document.getElementById('quantity');
-        const priceInput = document.getElementById('price');
-        const totalInput = document.getElementById('total');
+        <script src="JS/sidebar.js"></script>
+        <script src="JS/LogOut.js"></script>
+        <script src="JS/mobileView.js"></script>
 
-        function calculateTotal() {
-            const quantity = parseFloat(quantityInput.value) || 0;
-            const price = parseFloat(priceInput.value) || 0;
-            const total = quantity * price;
-            totalInput.value = total.toFixed(2);
-        }
-
-        quantityInput.addEventListener('input', calculateTotal);
-        priceInput.addEventListener('input', calculateTotal);
-    </script>
 </body>
+
 </html>
